--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,5 +1,5 @@
 <div class="container__menu__title">
-  <hr>
-  <h1>THONES BLOG</h1>
+  <h1>Mr. Thompson Blog</h1>
+  <p>Welcome to my <strong>Angular</strong> e <strong>Frontend</strong> Notes.</p>
   <hr>
 </div>
