--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,41 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
-
 <app-menu-title></app-menu-title>
 
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+      id="1"
+      photoCover="https://miro.medium.com/v2/resize:fit:1400/format:webp/0*lkpgKWc22o4uaJJ4"
+      cardTitle="Angular v18 has arrived!"
+      cardDescription="Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, et
+      officia. Inventore nam deleniti alias, beatae optio quaerat quia,
+      officia nihil ratione at, labore molestias ipsa aliquam expedita
+      nesciunt ea!"
+    ></app-big-card>
+    <app-big-card
+      id="2"
+      photoCover="https://community.sap.com/legacyfs/online/storage/blog_attachments/2014/10/github_pages_572846.jpg"
+      cardTitle="Github pages show me!"
+      cardDescription="Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, et
+      officia. Inventore nam deleniti alias, beatae optio quaerat quia,
+      officia nihil ratione at, labore molestias ipsa aliquam expedita
+      nesciunt ea!"
+    ></app-big-card>
   </div>
   <div class="articles_others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      id="1"
+      photoCover="https://www.oditeksolutions.com/wp-content/uploads/2015/10/AngularJS-Framework-and-Features.png"
+      cardTitle="Angular Architecture"
+    ></app-small-card>
+    <app-small-card
+      id="2"
+      photoCover="https://miro.medium.com/v2/resize:fit:1087/1*J5JyVTEgnRkq-iZyx2b-lA.png"
+      cardTitle="Angular CLI"
+    ></app-small-card>
+    <app-small-card
+      id="3"
+      photoCover="https://mdevelopers.com/storage/2_what-is-angular_93ff0a6a.webp"
+      cardTitle="Angular Framework"
+    ></app-small-card>
   </div>
 </div>
