--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,7 +1,9 @@
 <div class="container__menu-bar">
   <ul>
-    <li><a href="https://www.linkedin.com/in/thompson-carlos/" target="_blank">LinkedIn</a></li>•
-    <li><a href="https://github.com/thompsoncarlos" target="_blank">Github</a></li>•
-    <li><a href="https://www.youtube.com/@Angular">Youtube</a></li>
+    <li><a href="https://www.linkedin.com/in/thompson-carlos/" target="_blank">LinkedIn</a></li>
+    <li><span>•</span></li>
+    <li><a href="https://github.com/thompsoncarlos" target="_blank">Github</a></li>
+    <li><span>•</span></li>
+    <li><a href="https://www.youtube.com/@Angular" target="_blank">Youtube</a></li>
   </ul>
 </div>
