--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -9,6 +9,7 @@
 
 .small-card__photo > img{
   width: 200px;
+  height: 100px;
   min-width: 200px;
   margin-right: 20px;
 }
@@ -17,6 +18,8 @@
 display: flex;
 justify-content: center;
 align-items: center;
+
+font-size: 14px;
 }
 
 .container__small-card-separator {
