--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,13 +2,13 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
       <img
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFRweHXxMwDWYZvi5MZNEDBgr5FZhqLPqYig&s"
+        src="{{ photoCover }}"
         height="200px"
         alt=""
       />
     </div>
     <div class="small-card__title">
-      <h1><a>Saiu a nova versão do angular</a></h1>
+      <h1><a [routerLink]="['content', id]">{{ cardTitle }}</a></h1>
     </div>
   </div>
 
